# pass_manager

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: collaboration_request.yml
pass_manager/: __init__.py  __main__.py  cli.py  crypto.py  models.py  vault.py
website/: index.html
website/css/: style.css
website/js/: main.js
